Fix entity popup getting cut off by scroll container

--- a/src/components/dataTable/style.scss
+++ b/src/components/dataTable/style.scss
@@ -39,3 +39,12 @@
 .breakWords {
   overflow-wrap: break-word;
 }
+
+.tablePopup {
+  max-height: 500px;
+  overflow-y: scroll;
+
+  .tablePopupInner {
+    width: 400px;
+  }
+}
